--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,23 @@
         </configuration>
       </plugin>
     </plugins>
+	  <plugins>
+<!-- Single Surefire plugin declaration -->
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>3.1.2</version>
+<configuration>
+<includes>
+<include>**/*Test.java</include>
+<include>**/*Tests.java</include>
+<include>**/*TestCase.java</include>
+</includes>
+<useModulePath>false</useModulePath>
+</configuration>
+</plugin>
+</plugins>
   </build>
+	
 
 </project>
