--- a/pom.xml
+++ b/pom.xml
@@ -133,17 +133,6 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.1.2</version>
-        <configuration>
-          <useModulePath>false</useModulePath> <!-- Important for JUnit 5 + Cucumber -->
-        </configuration>
-      </plugin>
-    
-	  
-<!-- Single Surefire plugin declaration -->
-<plugin>
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-surefire-plugin</artifactId>
 <version>3.1.2</version>
@@ -156,8 +145,6 @@
 <useModulePath>false</useModulePath>
 </configuration>
 </plugin>
-</plugins>
-  
-	
-
+    </plugins>
+  </build>
 </project>
