--- a/pom.xml
+++ b/pom.xml
@@ -5,140 +5,108 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>RestAssuredRefined</name>
   
-    <dependencies>
+   <dependencies>
 
-    <!-- ✅ Cucumber (Java + JUnit Platform) -->
-    <dependency>
-      <groupId>io.cucumber</groupId>
-      <artifactId>cucumber-java</artifactId>
-      <version>7.15.0</version>
-    </dependency>
+  <!-- ✅ Cucumber + TestNG -->
+  <dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>7.15.0</version>
+  </dependency>
+  <dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-testng</artifactId>
+    <version>7.15.0</version>
+    <scope>test</scope>
+  </dependency>
+  <dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.8.0</version>
+    <scope>test</scope>
+  </dependency>
 
-    <dependency>
-      <groupId>io.cucumber</groupId>
-      <artifactId>cucumber-junit-platform-engine</artifactId>
-      <version>7.15.0</version>
-      <scope>test</scope>
-    </dependency>
+  <!-- ✅ PicoContainer (for Cucumber DI) -->
+  <dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-picocontainer</artifactId>
+    <version>7.15.0</version>
+    <scope>test</scope>
+  </dependency>
 
-    <!-- ✅ JUnit Platform (for JUnit 5 + Cucumber integration) -->
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-suite</artifactId>
-      <version>1.10.0</version>
-      <scope>test</scope>
-    </dependency>
+  <!-- ✅ RestAssured -->
+  <dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>5.4.0</version>
+  </dependency>
 
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-suite-api</artifactId>
-      <version>1.10.0</version>
-      <scope>test</scope>
-    </dependency>
+  <!-- ✅ JSON -->
+  <dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20231013</version>
+  </dependency>
 
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-commons</artifactId>
-      <version>1.10.0</version>
-      <scope>test</scope>
-    </dependency>
+  <!-- ✅ Jackson -->
+  <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.16.1</version>
+  </dependency>
 
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-launcher</artifactId>
-      <version>1.10.0</version>
-      <scope>test</scope>
-    </dependency>
+  <!-- ✅ Apache POI (Excel) -->
+  <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>5.2.3</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.3</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-collections4</artifactId>
+    <version>4.4</version>
+  </dependency>
 
-    <!-- ✅ PicoContainer (for dependency injection with Cucumber) -->
-    <dependency>
-      <groupId>io.cucumber</groupId>
-      <artifactId>cucumber-picocontainer</artifactId>
-      <version>7.15.0</version>
-      <scope>test</scope>
-    </dependency>
+  <!-- ✅ Logging -->
+  <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>2.0.12</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.20.0</version>
+  </dependency>
 
-    <!-- ✅ RestAssured -->
-    <dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>rest-assured</artifactId>
-      <version>5.4.0</version>
-    </dependency>
+  <!-- ✅ ExtentReports -->
+  <dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.1.1</version>
+  </dependency>
 
-    <!-- ✅ JSON Library -->
-    <dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>20231013</version>
-    </dependency>
-
-    <!-- ✅ Jackson (for POJO-JSON mapping) -->
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.16.1</version>
-    </dependency>
-
-    <!-- ✅ Excel (Apache POI) -->
-    <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml</artifactId>
-      <version>5.2.3</version>
-    </dependency>
-
-    <!-- ✅ Logging -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>2.0.12</version>
-    </dependency>
-    
-	<dependency>
-	    <groupId>org.apache.logging.log4j</groupId>
-	    <artifactId>log4j-core</artifactId>
-	    <version>2.20.0</version> <!-- or your preferred version -->
-	</dependency>
-
-    <!-- ✅ ExtentReports -->
-    <dependency>
-      <groupId>com.aventstack</groupId>
-      <artifactId>extentreports</artifactId>
-      <version>5.1.1</version>
-    </dependency>
-    
-	<!-- Apache POI Core -->
-	<dependency>
-	    <groupId>org.apache.poi</groupId>
-	    <artifactId>poi</artifactId>
-	    <version>5.2.3</version>
-	</dependency>
-	
-
-	
-	<!-- Apache POI dependencies -->
-	<dependency>
-	    <groupId>org.apache.commons</groupId>
-	    <artifactId>commons-collections4</artifactId>
-	    <version>4.4</version>
-	</dependency>
-
-
-  </dependencies>
+</dependencies>
 
   <build>
     <plugins>
-      <plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-surefire-plugin</artifactId>
-<version>3.1.2</version>
-<configuration>
-<includes>
-<include>**/*Test.java</include>
-<include>**/*Tests.java</include>
-<include>**/*TestCase.java</include>
-</includes>
-<useModulePath>false</useModulePath>
-</configuration>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-surefire-plugin</artifactId>
+  <version>3.1.2</version>
+  <configuration>
+    <includes>
+      <include>**/*Test.java</include>
+      <include>**/*Tests.java</include>
+      <include>**/*TestCase.java</include>
+    </includes>
+    <useModulePath>false</useModulePath>
+  </configuration>
 </plugin>
     </plugins>
   </build>
