--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -108,12 +108,14 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-
+     - name: Cache Maven packages
+  uses: actions/cache@v3
+  with:
+    path: ~/.m2/repository
+    key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+    restore-keys: |
+      ${{ runner.os }}-maven-
+
 
       - name: Build and test with Maven
         run: mvn clean test
