--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,64 +1,51 @@
-
-
 # name: Run BDD RestAssured Tests
- 
+
 # on:
-
 #   push:
-
 #     branches: [ master ]
-
 #   pull_request:
-
 #     branches: [ master ]
- 
+
 # jobs:
-
 #   test:
-
 #     runs-on: ubuntu-latest
- 
+
 #     steps:
-
 #       - name: Checkout code
-
 #         uses: actions/checkout@v3
- 
+
 #       - name: Set up Java
-
 #         uses: actions/setup-java@v3
-
 #         with:
-
 #           java-version: '17'
-
 #           distribution: 'temurin'
- 
+
 #       - name: Cache Maven packages
-
 #         uses: actions/cache@v3
-
 #         with:
+#           path: ~/.m2/repository
+#           key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+#           restore-keys: |
+#             ${{ runner.os }}-maven-
 
-#           path: ~/.m2
-
-#           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-
-#           restore-keys: ${{ runner.os }}-maven-
- 
-#       - name: Build and test with Maven
-
-#         run: mvn clean test
-        
-
-      
 #       - name: Build and test with Maven
 #         run: mvn clean test
 
+#       # Make sure this step runs even if tests fail
 #       - name: List generated Extent Report
+#         if: always()
 #         run: |
-#           echo "Listing files in target directory:"
-#           ls -la "${{ github.workspace }}/target"
+#           echo "Listing files in ExtentReports directory:"
+#           ls -la "${{ github.workspace }}/target/ExtentReports"
+
+#       - name: Check if report exists
+#         if: always()
+#         run: |
+#           if [ -f "${{ github.workspace }}/target/ExtentReports/ExtentReport.html" ]; then
+#             echo "Extent Report found!"
+#           else
+#             echo "Extent Report not found!"
+#           fi
 
 #       - name: Send email notification
 #         if: failure()
@@ -81,10 +68,7 @@
 #           to: ${{ secrets.DEVELOPER_EMAIL }}
 #           from: ${{ secrets.GMAIL_USERNAME }}
 #           attachments: |
-#             ${{ github.workspace }}/target/ExtentReport.html
-
-
-
+#             ${{ github.workspace }}/target/ExtentReports/ExtentReport.html
 
 name: Run BDD RestAssured Tests
 
@@ -108,18 +92,21 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Cache Maven packages
+      - name: Cache Maven dependencies
+        id: cache-maven
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+          key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven-
+            maven-${{ runner.os }}-
+
+      - name: Show cache result
+        run: echo "Cache hit? -> ${{ steps.cache-maven.outputs.cache-hit }}"
 
       - name: Build and test with Maven
         run: mvn clean test
 
-      # Make sure this step runs even if tests fail
       - name: List generated Extent Report
         if: always()
         run: |
@@ -157,3 +144,4 @@ jobs:
           from: ${{ secrets.GMAIL_USERNAME }}
           attachments: |
             ${{ github.workspace }}/target/ExtentReports/ExtentReport.html
+
