--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -71,27 +71,24 @@
 #             ${{ github.workspace }}/target/ExtentReports/ExtentReport.html
 
 name: Run BDD RestAssured Tests
-
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
+      
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
-
+      
       - name: Cache Maven dependencies
         id: cache-maven
         uses: actions/cache@v3
@@ -100,19 +97,21 @@ jobs:
           key: maven-${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             maven-${{ runner.os }}-
-
+      
       - name: Show cache result
         run: echo "Cache hit? -> ${{ steps.cache-maven.outputs.cache-hit }}"
-
+        
       - name: Build and test with Maven
         run: mvn clean test
-
+        continue-on-error: false
+      
       - name: List generated Extent Report
         if: always()
         run: |
           echo "Listing files in ExtentReports directory:"
-          ls -la "${{ github.workspace }}/target/ExtentReports"
-
+          mkdir -p "${{ github.workspace }}/target/ExtentReports"
+          ls -la "${{ github.workspace }}/target/ExtentReports" || echo "Directory empty or not found"
+      
       - name: Check if report exists
         if: always()
         run: |
@@ -120,8 +119,10 @@ jobs:
             echo "Extent Report found!"
           else
             echo "Extent Report not found!"
+            echo "Checking general target directory structure:"
+            find "${{ github.workspace }}/target" -type f -name "*.html" | grep -i extent || echo "No Extent reports found in target"
           fi
-
+      
       - name: Send email notification
         if: failure()
         uses: dawidd6/action-send-mail@v3
@@ -133,15 +134,11 @@ jobs:
           subject: "Test Failed - Extent Report Attached"
           body: |
             Hello Developer,
-
             One or more tests have failed during the GitHub Actions workflow.
-
             Please review the attached Extent Report for more information.
-
             Regards,  
             GitHub Actions
           to: ${{ secrets.DEVELOPER_EMAIL }}
           from: ${{ secrets.GMAIL_USERNAME }}
           attachments: |
             ${{ github.workspace }}/target/ExtentReports/ExtentReport.html
-
